fix: Allow code element wrap for mobile layout

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -154,11 +154,6 @@
   ::-webkit-scrollbar-thumb:hover {
     @apply bg-skin-card-muted;
   }
-
-  code {
-    white-space: pre;
-    overflow: scroll;
-  }
 }
 
 @layer components {
